--- a/src/styles/_letter.scss
+++ b/src/styles/_letter.scss
@@ -22,7 +22,7 @@
 .letter__input {
   box-sizing: border-box;
   font-family: $font-letter;
-  text-align: center;
+  //text-align: center;
   font-size: 2.5rem;
   width: 100%;
   height: 100%;
